# briefcase

./: .gitignore  CLAUDE.md  analyze_data.py  collect_data.py  main.py  pyproject.toml
docs/: stock_processing_plan.md
research/: README.md  __init__.py
research/analysis/: __init__.py  data_analyzer.py
research/data_collection/: __init__.py  run_full_collection.py  stock_data_collector.py  yfinance_research.py
research/notebooks/: basics.ipynb
